syntax = "proto3";

package install;

option go_package = "github.com/jdfalk/ubuntu-autoinstall-webhook/pkg/proto;proto";

import "third_party/google/api/annotations.proto";

// InstallService defines the service for installation status updates.
service InstallService {
  // ReportStatus receives status updates from the client.
  rpc ReportStatus(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      post: "/v1/install/status"
      body: "*"
    };
  }
}

// StatusRequest is the request message for reporting installation status.
message StatusRequest {
  string hostname = 1;
  string ip_address = 2;
  int32 progress = 3;
  string message = 4;
}

// StatusResponse is the response message acknowledging the status update.
message StatusResponse {
  bool acknowledged = 1;
}
